# openai-functions

./: README.md  main.py  pyproject.toml
openai_functions/: __init__.py
