[tool.poetry]
name = "openai-functions"
version = "0.1.0"
description = ""
authors = ["Manolo Santos <manolo.santos@gmail.com>"]
readme = "README.md"
packages = [{include = "openai_functions"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
